[gd_scene load_steps=30 format=3 uid="uid://dr3c2qq1qkgjr"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_us67b"]
[ext_resource type="Texture2D" uid="uid://ddl24tvdysdsi" path="res://Art/Player.png" id="2_fd2w2"]
[ext_resource type="AudioStream" uid="uid://bg6qnnetrshul" path="res://Sound/SFX/Place.wav" id="3_mvvhq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t5p5l"]
atlas = ExtResource("2_fd2w2")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwk35"]
atlas = ExtResource("2_fd2w2")
region = Rect2(240, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1hh3"]
atlas = ExtResource("2_fd2w2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsr5h"]
atlas = ExtResource("2_fd2w2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7kbb"]
atlas = ExtResource("2_fd2w2")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyrix"]
atlas = ExtResource("2_fd2w2")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x8yv"]
atlas = ExtResource("2_fd2w2")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8u7j"]
atlas = ExtResource("2_fd2w2")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3rgc"]
atlas = ExtResource("2_fd2w2")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3q5b"]
atlas = ExtResource("2_fd2w2")
region = Rect2(272, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i87ef"]
atlas = ExtResource("2_fd2w2")
region = Rect2(288, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewagl"]
atlas = ExtResource("2_fd2w2")
region = Rect2(304, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e21yi"]
atlas = ExtResource("2_fd2w2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtfwx"]
atlas = ExtResource("2_fd2w2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0jfa"]
atlas = ExtResource("2_fd2w2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kusbu"]
atlas = ExtResource("2_fd2w2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbeb"]
atlas = ExtResource("2_fd2w2")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lonbi"]
atlas = ExtResource("2_fd2w2")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1xcu"]
atlas = ExtResource("2_fd2w2")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io5o3"]
atlas = ExtResource("2_fd2w2")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vy1do"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5p5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwk35")
}],
"loop": true,
"name": &"Idle Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1hh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsr5h")
}],
"loop": true,
"name": &"Idle Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7kbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyrix")
}],
"loop": true,
"name": &"Idle Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x8yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8u7j")
}],
"loop": true,
"name": &"Idle Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3q5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i87ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewagl")
}],
"loop": true,
"name": &"Walking Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e21yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtfwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0jfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kusbu")
}],
"loop": true,
"name": &"Walking Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lonbi")
}],
"loop": true,
"name": &"Walking Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1xcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io5o3")
}],
"loop": true,
"name": &"Walking Right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5f7o"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_cjh8q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tax2p"]
resource_name = "stretch"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 0.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2i2w6"]
_data = {
"RESET": SubResource("Animation_cjh8q"),
"stretch": SubResource("Animation_tax2p")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wg8nb"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_us67b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vy1do")
animation = &"Idle Back"

[node name="Movement Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i5f7o")

[node name="Player Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2i2w6")
}

[node name="Place down" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mvvhq")
bus = &"Sound Effects"

[node name="tower collision" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower collision"]
shape = SubResource("RectangleShape2D_wg8nb")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wg8nb")

[connection signal="body_entered" from="tower collision" to="." method="_on_tower_collision_body_entered"]
[connection signal="body_exited" from="tower collision" to="." method="_on_tower_collision_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
